--- a/index.html
+++ b/index.html
@@ -56,21 +56,21 @@
             </div>
             <div class="course-card">
                 <img src="./Images/c2.jpg" alt="Course-1">
-                <h3>2024 Python Data Visualization Masterclass</h3>
+                <h3>ReactJS The Complete Guide 2024</h3>
                 <p>Stephen Hawking</p>
                 <p>3.5⭐⭐⭐</p>
                 <p>449 <del>1999</del></p>
             </div>
             <div class="course-card">
                 <img src="./Images/c3.jpg" alt="Course-1">
-                <h3>2024 Python Data Visualization Masterclass</h3>
+                <h3>MERN Full stack Course Basic to Advanced</h3>
                 <p>Stephen Hawking</p>
                 <p>4.5⭐⭐⭐⭐</p>
                 <p>449 <del>1999</del></p>
             </div>
             <div class="course-card">
                 <img src="./Images/c4.jpg" alt="Course-1">
-                <h3>2024 Python Data Visualization Masterclass</h3>
+                <h3>AWS Cloud Practitioner Course</h3>
                 <p>Stephen Hawking</p>
                 <p>2⭐⭐</p>
                 <p>449 <del>1999</del></p>
