--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
         </div>
         <div class="navbar__s3">
             <p>Courses</p>
-            <p>My Learning</p>
+             <div class="mylearning">
+                <p>My Learning</p>
+                <p class="mylearning__popup">You did not purchase anything yet! Try purchasing top courses</p>
+             </div>
             <i class="fa-solid fa-cart-shopping" style="color: #000000"></i>
             <i class="fa-solid fa-bell" style="color: #000000"></i>
             <i class="fa-solid fa-user" style="color: #000000"></i>
@@ -41,6 +44,10 @@
     </div>
     <div class="Section-image">
         <img src="./Images/sale-image.jpg" alt="Sale-image">
+        <div class="section-image__offer">
+            <h1>Udemy Flash Sale! 24 Hours Left</h1>
+            <p>Get top courses for just 499. Hurry Up and Grab soon!</p>
+        </div>
     </div>
     <div class="recommended">
         <h1>Recommended for you</h1>
