--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
         <div class="navbar__s1">
             <h1>Udemy</h1>
         </div>
+        <div class="menubar">
+            <i class="fa-solid fa-bars"></i>
+        </div>
+
         <div class="navbar__s2">
             <i class="fa-solid fa-magnifying-glass" style="color: #000000"></i>
             <input placeholder="Search for anything here. Tech,Business, Art ..." class="navbar__s2-input" />
